.k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  annotations:
    description: CourseMapper-webserver
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: coursemapper-webserver.sc.inko.cloud
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webapp
            port:
              number: 80
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: webserver
            port:
              number: 81
  tls:
  - secretName: tls-certificate
    hosts:
    - coursemapper-webserver.sc.inko.cloud
